[package]
name = "dxclparser"
version = "0.1.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/koarlchen/dxclparser.git"
description = "A regex-based parser for the telnet interface provided by a DX cluster"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4"