[package]
name = "dxclparser"
version = "1.0.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxclparser.git"
description = "A regex-based parser for the telnet interface provided by a DX cluster"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
regex = "1.6.0"
lazy_static = "1.4.0"
thiserror = "1.0.34"